--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,6 +4,12 @@ on:
   push:
     branches:
       - master
+    paths-ignore:
+      - 'docs/**'
+      - "*.md"
+  pull_request:
+    branches:
+      - master
 
 jobs:
   lint:
